Updating profile fragment

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.What2WatchSvitlikOdunsiF23"
         tools:targetApi="31">
         <activity
-            android:name=".logout"
+            android:name=".Logout"
             android:exported="false" />
         <activity
             android:name=".LoginActivity"
@@ -27,7 +27,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Register"
+            android:name=".RegisterActivity"
             android:exported="false"
             android:label="@string/title_activity_register" />
         <activity
