--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,12 +14,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.What2WatchSvitlikOdunsiF23"
         tools:targetApi="31">
+
         <activity
-            android:name=".userMovieReviews"
+            android:name=".Logout"
             android:exported="false" />
-        <activity
-            android:name=".userProfile"
-            android:exported="false" />
+
         <activity
             android:name=".LoginActivity"
             android:exported="true">
@@ -27,10 +28,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".RegisterActivity"
             android:exported="false"
             android:label="@string/title_activity_register" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -42,13 +45,6 @@
             </intent-filter>
         </activity>
 
-        <service
-            android:name=".ui.notifications.PushNotifications"
-            android:exported="false">
-            <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT" />
-            </intent-filter>
-        </service>
 
         <meta-data
             android:name="preloaded_fonts"
