--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,11 +14,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.What2WatchSvitlikOdunsiF23"
         tools:targetApi="31">
-
         <activity
             android:name=".Logout"
             android:exported="false" />
-
         <activity
             android:name=".LoginActivity"
             android:exported="true">
@@ -28,12 +26,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".RegisterActivity"
             android:exported="false"
             android:label="@string/title_activity_register" />
-
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -45,6 +41,13 @@
             </intent-filter>
         </activity>
 
+        <service
+            android:name=".ui.notifications.PushNotifications"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
 
         <meta-data
             android:name="preloaded_fonts"
