--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,35 +15,28 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.What2WatchSvitlikOdunsiF23"
         tools:targetApi="31">
-
+        <activity
+            android:name=".ProfileEdit"
+            android:exported="false" />
         <activity
             android:name=".LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
-
         <activity
             android:name=".Logout"
             android:exported="false" />
-
-
-
-
         <activity
             android:name=".RegisterActivity"
             android:exported="true"
-            android:label="@string/title_activity_register">
-        </activity>
-
-
+            android:label="@string/title_activity_register"></activity>
         <activity
             android:name=".MainActivity"
-            android:exported="false">
-        </activity>
+            android:exported="false"></activity>
 
         <service
             android:name=".ui.notifications.NotificationsActivity"
@@ -52,8 +45,6 @@
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
-
-
 
         <meta-data
             android:name="preloaded_fonts"
